第一次修改文件内容

--- a/readme.text
+++ b/readme.text
@@ -1,4 +1,6 @@
 
                            Read Me
     I want to change something ,but it's just text for git .
+so,change is necessary for me, to be better developer.
+
 
